sure/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: sure
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
        - name: worker
          image: ghcr.io/we-promise/sure:stable
          command: ["bundle", "exec", "sidekiq"]
          volumeMounts:
            - mountPath: /rails/storage
              name: app-storage
      volumes:
        - name: app-storage
          persistentVolumeClaim:
            claimName: app-storage
