sure/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sure
  namespace: sure
spec:
  rules:
    - host: sure.192-168-0-37.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 3000
